--- a/package.json
+++ b/package.json
@@ -6,9 +6,25 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
+    "lint:css": "stylelint \"src/**/*.css\"",
+    "prepare": "husky",
+    "serve:ssr:poke-ssr": "node dist/poke-ssr/server/server.mjs"
   },
   "private": true,
+  "lint-staged": {
+    "src/**/*.ts": [
+      "eslint --fix"
+    ],
+    "src/**/*.css": [
+      "stylelint --fix"
+    ],
+    "*.{js,ts,html,css,json}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@angular/animations": "^19.1.0",
     "@angular/common": "^19.1.0",
@@ -17,8 +33,14 @@
     "@angular/forms": "^19.1.0",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
+    "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@angular/ssr": "^19.2.1",
+    "@tailwindcss/postcss": "^4.0.11",
+    "express": "^4.18.2",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -26,13 +48,28 @@
     "@angular-devkit/build-angular": "^19.1.5",
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
+    "@eslint/js": "^9.21.0",
+    "@testing-library/angular": "^17.3.6",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.18.0",
+    "@vitest/coverage-v8": "^3.0.8",
+    "angular-eslint": "^19.2.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "jsdom": "^26.0.0",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.3.0",
+    "stylelint": "^16.15.0",
+    "stylelint-config-standard": "^37.0.0",
+    "stylelint-config-tailwindcss": "^1.0.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.26.0",
+    "vitest": "^3.0.8"
   }
 }
