--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "npm run build"
-  publish = "dist/browser"
+  publish = "dist/poke-ssr/browser"
   functions = "netlify/functions"
 
 [[edge_functions]]
