feat: PokeSSR V1.0.3 - test new edge-fn config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
 [build]
   command = "npm run build"
   publish = "dist/poke-ssr/browser"
-  functions = "netlify/functions"
+
+[[plugins]]
+  package = "./netlify/build-plugins/debug-paths"
 
 [[edge_functions]]
   path = "/*"
